# protopipe-ui-composition-platform

./: .gitignore  AGENTS.md  README.md  compose.yaml  docker-compose.yml  mkdocs.yml
services/composer/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  run-k6.sh  test-local.sh
services/composer/bench/k6/: benchmark.js
services/composer/src/: admin.rs  contextloader.rs  experiment.rs  main.rs  page.rs  render.rs  service.rs
services/composer/src/contextloader/: mod.rs  post.rs  request.rs  rest.rs
services/composer/src/experiment/: apply.rs  assign.rs  config.rs  mod.rs
services/composer/src/page/: mod.rs  page_config.rs  page_resolver.rs  rfa_config.rs  rfa_resolver.rs
services/composer/src/render/: handler.rs  mod.rs  pool.rs  scripts.rs  worker.rs
services/composer/src/render/js/: namespace.js  output.js  partials.js  registry.js  render.js  replacements.js
services/composer/tests/: cucumber.rs  steps.rs
services/composer/tests/features/: experiment.feature  page.feature  render.feature
services/messagebridge/: Cargo.toml  Dockerfile  README.md
services/messagebridge/src/: main.rs
tests/bdd/: Cargo.toml
tests/bdd/features/: experiment.feature  page.feature
tests/bdd/features/boundedcontext/composer/01-page/: artifact-type.feature  content-type.feature  proxy-page-markers.feature  proxy-page.feature  routing.feature
tests/bdd/features/boundedcontext/composer/02-experiment/: assignment.feature  consent-and-default-variant.feature  experiment-scope.feature  proxy-page-overrides.feature  rfa-overrides.feature  static-data-overrides.feature
tests/bdd/features/boundedcontext/composer/03-rendering/: data-rendering.feature  form-post-routing.feature  partial-rendering.feature  proxy-page-streaming.feature  rest-service-data.feature  rest-service-resilience.feature  runtime-context-injection.feature  ssr-composition.feature
tests/bdd/features/boundedcontext/composer/04-interaction/: buffered-delivery.feature  event-lifecycle.feature
tests/bdd/features/boundedcontext/composer/04-rfa-ifa-config/: interaction-client-config.feature
tests/bdd/features/boundedcontext/composer/05-observability/: analytics-separation.feature  (+1 more)
tests/bdd/tests/: cucumber.rs  steps.rs
(+66 files in other folders)
