[package]
name = "protopipe-composer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "protopipe-composer"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"
tokio-stream = "0.1"
crossbeam-channel = "0.5"
deno_core = "0.399.0"
