[package]
name = "protopipe-messagebridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "protopipe-messagebridge"
path = "src/main.rs"

[dependencies]
actix-web = "4"
env_logger = "0.11"
lapin = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
