[package]
name = "protopipe-composer-bdd"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[[test]]
name = "cucumber"
harness = false

[dependencies]
cucumber = "0.20"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "cookies", "stream"] }
regex = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
